--- a/templates/listarVacunas.html
+++ b/templates/listarVacunas.html
@@ -49,7 +49,13 @@
                 </table>
             </div>
         </div> 
+        <div class="row mt-5">
+            <div class="col-md-2 offset-md-8">
+                <a href="/" class="btn btn-primary ml-2">Pacientes</a>
+            </div>
+        </div>
     </div> <!-- End Container -->
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
